<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_form_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/register_button"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/title_create_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_create_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="title"
            android:hint="@string/title_thought"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/description_create_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_form_textview" />

        <EditText
            android:id="@+id/description_create_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="description"
            android:hint="@string/description_thought"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:minLines="3"
            app:layout_constraintBottom_toTopOf="@+id/confirm_create_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_create_form" />

        <Button
            android:id="@+id/confirm_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:text="@string/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_create_form" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/category_layout"
            android:layout_width="186dp"
            android:layout_height="133dp"
            android:layout_marginTop="24dp"
            android:background="#FF0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_create_form">

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/category_thought"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/category_name_create_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/category_name_1"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_label" />

            <TextView
                android:id="@+id/category_description_create_form"
                android:layout_width="170dp"
                android:layout_height="59dp"
                android:text="@string/description_name_1"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_name_create_form" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/previous_button"
            android:layout_width="48dp"
            android:layout_height="138dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="38dp"
            android:text="@string/previous_button"
            android:textColor="#000000"
            android:textSize="42sp"
            android:focusable="false"
            app:backgroundTint="#FFFEFE"
            app:layout_constraintBottom_toTopOf="@+id/confirm_create_button"
            app:layout_constraintEnd_toStartOf="@+id/category_layout"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_create_form"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="48dp"
            android:layout_height="138dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="38dp"
            android:text="@string/next_button"
            android:textColor="#000000"
            android:textSize="42sp"
            android:focusable="false"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/confirm_create_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toEndOf="@+id/category_layout"
            app:layout_constraintTop_toBottomOf="@+id/description_create_form"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>