<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ThoughtInformationFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thought_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/edit_button"
            android:textColor="#000000"
            android:textSize="11sp"
            android:textStyle="bold"
            app:backgroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="30dp"
            android:text="@string/delete_button"
            android:textColor="#000000"
            android:textSize="11sp"
            android:textStyle="bold"
            app:backgroundTint="#00000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/edit_button" />

        <TextView
            android:id="@+id/date_fragment_thought_value"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/description_fragment_thought"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/date_fragment_thought"
            app:layout_constraintTop_toBottomOf="@+id/title_fragment_thought_value"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/date_fragment_thought"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/date_thought"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/description_fragment_thought"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_fragment_thought_value"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/description_fragment_thought_value"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_fragment_thought"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/description_fragment_thought"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/description_thought"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_fragment_thought_value" />

        <TextView
            android:id="@+id/title_fragment_thought_value"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/title_fragment_thought"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_fragment_thought"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/title_thought"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>